# smart-credit-risk-engine

./: README.md  main.py  notebook.ipynb  pyproject.toml  requirements.txt  smart_credit_metadata.joblib  smart_credit_model.joblib
app/: inference.py  main.py  model.py  schemas.py
